fix repostnoquote and more of longer usernames visible

--- a/css/compact.css
+++ b/css/compact.css
@@ -426,3 +426,13 @@ display: block;
 .tipdetailscompact, .rememberdetailscompact{
 line-height: 1.85;
 }
+
+
+.repost {
+    border-bottom: 0px;
+    background: inherit;
+}
+
+.member-handle, .member-pagingid {
+  max-width: 250px;
+}
